Adicionando a API dos games e iniciando os cards

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,13 @@
             </div>
     </mat-toolbar>
     <div>
-          <button mat-menu-item>AÇÃO</button>
-          <button mat-menu-item>AVENTURA</button>
+        <button class="btn btn-outline-success" type="button">AÇÃO</button>
+        <button class="btn btn-outline-success" type="button">AVENTURA</button>
+        <button class="btn btn-outline-success" type="button">FPS</button>
+        <button class="btn btn-outline-success" type="button">RPG</button>
+        <button class="btn btn-outline-success" type="button">ESPORTE</button>
+        <button class="btn btn-outline-success" type="button">CORRIDA</button>
+        <button class="btn btn-outline-success" type="button">SIMULADOR</button>
     </div>
 </div>
 
