--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -1,8 +1,18 @@
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+<section class="container">
+
+    <h1 class="titulo">Seção games</h1>
+
+    <div class="cards">
+        <div class="card" style="width: 18rem;" *ngFor="let item of gamer">
+            <div class="imagem-conteudo">
+                <img src="{{ item.imagem }}" class="card-img-top imagem" alt="{{ item.titulo }}">
+            </div>
+            <div class="card-body corpo-card">
+                <h5 class="card-title titulo-card">{{ item.titulo }}</h5>
+                <p class="card-text genero-card">Genero: {{ item.genero }}</p>
+                <a href="{{ item.link }}" class="btn btn-primary">ACESSAR</a>
+            </div>
+        </div>
     </div>
-  </div>
+
+</section>
