--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -1,6 +1,6 @@
 <section class="container">
 
-    <h1 class="titulo">Seção games</h1>
+    <h1 class="titulo">Top games</h1>
 
     <div class="cards">
         <div class="card" style="width: 18rem;" *ngFor="let item of gamer">
