--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,52 @@
+.container {
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;  
+}
+
+.titulo-logo {
+    color: azure;
+    font-weight: bold;
+}
+
+.icon-menu-navegacao {
+    background-color: azure;
+}
+
+.icon-menu-navegacao:hover {
+    background-color: #52657e;
+}
+
+.link-navegacao {
+    color: azure;
+}
+
+.link-navegacao-categoria:hover {
+    background-color: #52657e;
+    color: azure;
+    font-weight: bold;
+}
+
 .header {
-    background-color: grey;  
     justify-content: center;
+}
+
+.botoes-navegacao {
+    background-color: #141a3c;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    font-weight: bold;
+    color: #52657e;
+    border-color: #52657e;
+}
+
+button:hover {
+    background-color: #52657e;
+    color: whitesmoke;
+    border-color: #52657e;
 }
 
 .header-conteudo {
@@ -10,7 +56,6 @@
 
 .imagem {
     width: 3rem;
-    padding-top: 1rem;
 }
 
 .titulo {
@@ -20,3 +65,4 @@
     padding-left: 1rem;
     margin: 0;
 }
+
