Filtrando por genero acao

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,14 +13,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu-navegacao">
                     <li class="nav-item">
-                        <a class="nav-link link-navegacao" aria-current="page" href="#">Home</a>
+                        <a class="nav-link link-navegacao" aria-current="page" routerLink="">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle link-navegacao" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Categoria
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item link-navegacao-categoria" href="#">Ação</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="acao">Ação</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" href="#">Aventura</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" href="#">FPS</a></li>
                         </ul>
