--- a/src/app/components/categorias/acao/acao.component.html
+++ b/src/app/components/categorias/acao/acao.component.html
@@ -1,6 +1,6 @@
 <section class="container">
 
-    <h1 class="titulo">Top games</h1>
+    <h1 class="titulo">Games de Ação</h1>
 
     <div class="cards">
         <div class="card" *ngFor="let item of gamer">
@@ -10,7 +10,7 @@
             <div class="card-body corpo-card">
                 <h5 class="card-title titulo-card">{{ item.titulo }}</h5>
                 <p class="card-text genero-card">Genero: {{ item.genero }}</p>
-                <a href="{{ item.link }}" class="btn btn-primary">ACESSAR</a>
+                <a href="{{ item.link }}" class="btn btn-primary">Download</a>
             </div>
         </div>
     </div>
