--- a/src/app/components/categorias/acao/acao.component.html
+++ b/src/app/components/categorias/acao/acao.component.html
@@ -10,7 +10,12 @@
             <div class="card-body corpo-card">
                 <h5 class="card-title titulo-card">{{ item.titulo }}</h5>
                 <p class="card-text genero-card">Genero: {{ item.genero }}</p>
-                <a href="{{ item.link }}" class="btn btn-primary">Download</a>
+                <a href="{{ item.link }}" class="btn btn-primary botao-dowload">
+                    <span>
+                        <img class="icon-torrent" src="assets/img/icon-torrent.ico" alt="icone-torrent">
+                    </span>
+                    Download
+                </a>
             </div>
         </div>
     </div>
