--- a/src/app/components/categorias/aventura/aventura.component.html
+++ b/src/app/components/categorias/aventura/aventura.component.html
@@ -1,1 +1,22 @@
-<p>aventura works!</p>
+<section class="container">
+
+    <h1 class="titulo">Games de Aventura</h1>
+
+    <div class="cards">
+        <div class="card" *ngFor="let item of gamer">
+            <div class="imagem-conteudo">
+                <img src="{{ item.imagem }}" class="card-img-top imagem" alt="{{ item.titulo }}">
+            </div>
+            <div class="card-body corpo-card">
+                <h5 class="card-title titulo-card">{{ item.titulo }}</h5>
+                <p class="card-text genero-card">Genero: {{ item.genero }}</p>
+                <a href="{{ item.link }}" class="btn btn-primary botao-dowload">
+                    <span>
+                        <img class="icon-torrent" src="assets/img/icon-torrent.ico" alt="icone-torrent">
+                    </span>
+                    Download
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
