--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="acao">Ação</a></li>
-                            <li><a class="dropdown-item link-navegacao-categoria" href="#">Aventura</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="aventura">Aventura</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" href="#">FPS</a></li>
                         </ul>
                     </li>
