Listando por categoria fps

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,7 +22,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="acao">Ação</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="aventura">Aventura</a></li>
-                            <li><a class="dropdown-item link-navegacao-categoria" href="#">FPS</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="fps">FPS</a></li>
                         </ul>
                     </li>
                 </ul>
