Listando por categoria corrida

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,6 +23,7 @@
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="acao">Ação</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="aventura">Aventura</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="fps">FPS</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="corrida">Corrida</a></li>
                         </ul>
                     </li>
                 </ul>
