--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,6 +24,8 @@
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="aventura">Aventura</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="fps">FPS</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="corrida">Corrida</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="rpg">RPG</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="simulador">Simulador</a></li>
                         </ul>
                     </li>
                 </ul>
