Listando categoria  esportes e estrategia

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,6 +26,8 @@
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="corrida">Corrida</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="rpg">RPG</a></li>
                             <li><a class="dropdown-item link-navegacao-categoria" routerLink="simulador">Simulador</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="esportes">Esportes</a></li>
+                            <li><a class="dropdown-item link-navegacao-categoria" routerLink="estrategia">Estrategia</a></li>
                         </ul>
                     </li>
                 </ul>
