Implementado pesquisar por Jogo

--- a/src/app/components/categorias/aventura/aventura.component.css
+++ b/src/app/components/categorias/aventura/aventura.component.css
@@ -32,6 +32,7 @@
     height: 10rem;
     transition: .7s all ease-in-out;
     overflow: hidden;
+    background-size: cover;
 }
 
 .imagem-conteudo {
